--- a/package.json
+++ b/package.json
@@ -4,17 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "build:dev": "npm run build -- --watch --mode=development",
     "test": "DATABASE_URL=postgres://localhost/acme_tdd_test_db mocha spec.js",
-    "test:dev": "nodemon --exec npm run test"
+    "test:dev": "nodemon --exec npm run test",
+    "start:dev": "nodemon server --ignore dist/ --ignore src/ & npm run build:dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
+    "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
-    "supertest": "^6.2.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "supertest": "^6.2.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "express": "^4.18.1",
